    + [CL] Expand the rationale for the
      latest-debian-changelog-entry-without-new-date tag to mention
      possible implications for SOURCE_DATE_EPOCH/reproducible builds.
  * checks/control-file.pm:
    + [NT] Remove check for missing versioned build-depends for dpkg
      and debhlper when using Build-Profiles.  The necessary versions
      are now in oldstable.
  * checks/copyright-file.{desc,pm}:
    + [CL] Rename copyright-contains-dh-make-perl-boilerplate to
      copyright-contains-automatically-extracted-boilerplate as it can
      be generated by other tools such as dh-make-elpa. Thanks to Sean
      Whitton for the report. (Closes: #841832)
  * checks/cruft.{desc,pm}:
    + [CL] Clarify language of source-contains-prebuilt-ms-help-file
      description; there exists free software to generate .chm files.
    + [CL] Don't emit source-contains-prebuilt-ms-help-file for files
      generated by Halibut. (Closes: #867673)
    + [CL] Move r-data-without-readme-source to check the source package,
      no the binary; the expected README.source files are not installed
      in binary packages. (Closes: #866322)
    + [CL] Apply patch from Dylan Aïssi to also check for .RData files
      (not just .Rdata) files in r-data-without-readme-source.
      (Closes: #868178)
    + [CL] Check for "FIXME" and similar placeholders in various files
      under debian/. (Closes: #846009)
  * checks/fields.{desc,pm}:
    + [NT] Remove check for missing versioned build-depends for dpkg
      and debhlper when using Build-Profiles.  The necessary versions
      are now in oldstable.
    + [NT] Drop check for depending on multiple versions of tkx as
      tkx does not seem to be in Debian any longer.
  * checks/files.pm:
    + [CL] Add .yml to the list of file extensions to avoid false
      positives when emitting extra-license-file, with testcase. Thanks
      to Rene Engelhard for the report.  (Closes: #856137)