@@ -29,9 +29,10 @@ use Lintian::Data;
 use Lintian::Util qw(get_file_checksum);
 
 my $KNOWN_DISTS = Lintian::Data->new('changes-file/known-dists');
+my $SIGNING_KEY_FILENAMES = Lintian::Data->new('common/signing-key-filenames');
 
 sub run {
-    my (undef, undef, $info) = @_;
+    my (undef, undef, $info, undef, $group) = @_;
 
     # If we don't have a Format key, something went seriously wrong.
     # Tag the file and skip remaining processing.
@@ -175,11 +176,32 @@ sub run {
         check_maintainer($info->field('changed-by'), 'changed-by');
     }
 
+    my $has_signing_key = 1;
+    my $src = $group->get_source_processable;
+    if ($src) {
+        for my $key_name ($SIGNING_KEY_FILENAMES->all) {
+            my $path = $src->info->index_resolved_path("debian/$key_name");
+            if ($path and $path->is_file) {
+                $has_signing_key = 1;
+                last;
+            }
+        }
+    }
+
     my $files = $info->files;
     my $path = readlink($info->lab_data_path('changes'));
     $path =~ s#/[^/]+$##;
     foreach my $file (keys %$files) {
         my $file_info = $files->{$file};
+
+        # Ensure orig tarballs have a signature if we have an upstream
+        # signature.
+        if (   $has_signing_key
+            && $file =~ m/\.orig\.tar\./
+            && $file !~ m/\.asc$/
+            && not exists $files->{"$file.asc"}) {
+            tag 'orig-tarball-missing-upstream-signature', "$file";
+        }
 
         # check section
         if (   ($file_info->{section} eq 'non-free')
