@@ -1,0 +1,21 @@
+Format: 1.8
+Date: {$date}
+Source: {$source}
+Binary: {$source}
+Architecture: source all
+Version: {$version}
+Distribution: unstable
+Urgency: low
+Maintainer: {$author}
+Changed-By: {$author}
+Files:
+ d41d8cd98f00b204e9800998ecf8427e 0 devel optional {$source}.orig.tar.xz
+ d41d8cd98f00b204e9800998ecf8427e 0 devel optional {$source}.debian.tar.xz
+Checksums-Sha1:
+ da39a3ee5e6b4b0d3255bfef95601890afd80709 0 {$source}.orig.tar.xz
+ da39a3ee5e6b4b0d3255bfef95601890afd80709 0 {$source}.debian.tar.xz
+Checksums-Sha256:
+ e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 0 {$source}.orig.tar.xz
+ e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 0 {$source}.debian.tar.xz
+Description:
+ {$source} - {$description}
